k8s/land-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: land-service
  name: land-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: land-node
