k8s/land-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: land-debug-ingress
spec:
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: land-service
          servicePort: 8080
